--- a/Source/ExcelDna.Registration.VisualBasic/packages.config
+++ b/Source/ExcelDna.Registration.VisualBasic/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.AddIn" version="0.33.7-rc1" targetFramework="net4" />
-  <package id="ExcelDna.Integration" version="0.33.7-rc1" targetFramework="net4" />
+  <package id="ExcelDna.Integration" version="0.33.9" targetFramework="net4" />
   <package id="ExcelDna.Interop" version="14.0.1" targetFramework="net4" />
 </packages>
