--- a/Source/Test/packages.config
+++ b/Source/Test/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.Integration" version="0.33.7-rc1" targetFramework="net451" />
+  <package id="ExcelDna.Integration" version="0.33.9" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net4" />
 </packages>
