Enum marshalling works, but Nullable<Enum> is still broken. The problem is that the LambdaExpression produced by ExcelDna.Registration.ParameterConversions.NullableConversion for Nullable<T> has a parameter of type object, which will not match any converters to type T. This means T can only be one of the basic types that do not require any converter function.
I've also added a generic return marshaller for any Enum.

Registration.Sample has new samples for Enum and Complex, but all the other samples have been commented out to facilitate investigation of the above problem.

--- a/Source/Samples/Registration.Sample.VisualBasic/packages.config
+++ b/Source/Samples/Registration.Sample.VisualBasic/packages.config
@@ -3,4 +3,5 @@
   <package id="Excel-DNA.Interop" version="14.0.1" targetFramework="net4" />
   <package id="ExcelDna.AddIn" version="0.33.9" targetFramework="net451" />
   <package id="ExcelDna.Integration" version="0.33.9" targetFramework="net451" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net451" />
 </packages>
