MarshalByRef works for return types

--- a/Source/ExcelDna.Registration/ExcelDna.Registration.csproj
+++ b/Source/ExcelDna.Registration/ExcelDna.Registration.csproj
@@ -48,6 +48,7 @@
     <Compile Include="FunctionExecutionHandler.cs" />
     <Compile Include="FunctionExecutionConfiguration.cs" />
     <Compile Include="FunctionExecutionRegistration.cs" />
+    <Compile Include="ExcelObjectCache.cs" />
     <Compile Include="ParameterConversionConfiguration.cs" />
     <Compile Include="ParameterConversionRegistration.cs">
       <SubType>Code</SubType>
