--- a/Source/Samples/Registration.Sample.VisualBasic/packages.config
+++ b/Source/Samples/Registration.Sample.VisualBasic/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="ExcelDna.AddIn" version="0.34.1-beta" targetFramework="net451" />
   <package id="ExcelDna.Integration" version="0.34.1-beta" targetFramework="net451" />
-  <package id="Excel-DNA.Interop" version="14.0.1" targetFramework="net4" />
+  <package id="ExcelDna.Interop" version="14.0.1" targetFramework="net451" />
 </packages>
