--- a/NuGet/ExcelDna.Registration/ExcelDna.Registration.nuspec
+++ b/NuGet/ExcelDna.Registration/ExcelDna.Registration.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>ExcelDna.Registration</id>
-        <version>0.34.1-beta</version>
+        <version>0.34.1-beta2</version>
         <title>Excel-DNA Registration Extensions</title>
         <authors>Govert van Drimmelen</authors>
         <owners>Govert van Drimmelen</owners>
