--- a/Source/ExcelDna.Registration.FSharp/packages.config
+++ b/Source/ExcelDna.Registration.FSharp/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.Integration" version="0.34.1-beta" targetFramework="net40" />
+  <package id="ExcelDna.Integration" version="0.34.6" targetFramework="net40" />
 </packages>
