--- a/Source/ExcelDna.Registration.VisualBasic/packages.config
+++ b/Source/ExcelDna.Registration.VisualBasic/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.Integration" version="0.34.1-beta" targetFramework="net40" />
+  <package id="ExcelDna.Integration" version="0.34.6" targetFramework="net40" />
   <package id="ExcelDna.Interop" version="14.0.1" targetFramework="net4" />
 </packages>
