--- a/Source/Samples/Registration.Sample/packages.config
+++ b/Source/Samples/Registration.Sample/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.AddIn" version="0.34.1-beta" targetFramework="net451" />
-  <package id="ExcelDna.Integration" version="0.34.1-beta" targetFramework="net451" />
+  <package id="ExcelDna.AddIn" version="0.34.6" targetFramework="net451" />
+  <package id="ExcelDna.Integration" version="0.34.6" targetFramework="net451" />
 </packages>
