--- a/Source/Test/packages.config
+++ b/Source/Test/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.Integration" version="0.34.1-beta" targetFramework="net451" />
-  <package id="NUnit" version="3.5.0" targetFramework="net451" />
+  <package id="ExcelDna.Integration" version="0.34.6" targetFramework="net451" />
+  <package id="NUnit" version="3.7.1" targetFramework="net451" />
 </packages>
