--- a/Source/Samples/Registration.Sample.FSharp/packages.config
+++ b/Source/Samples/Registration.Sample.FSharp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="ExcelDna.AddIn" version="0.34.6" targetFramework="net40" />
   <package id="ExcelDna.Integration" version="0.34.6" targetFramework="net40" />
+  <package id="FSharp.Core" version="4.6.2" targetFramework="net45" />
 </packages>
