Update projects and NuGet packages to target Excel-DNA v1.0.0

--- a/Source/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.fsproj
+++ b/Source/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.fsproj
@@ -73,8 +73,8 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="ExcelDna.Integration">
-      <HintPath>..\packages\ExcelDna.Integration.0.34.6\lib\ExcelDna.Integration.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\packages\ExcelDna.Integration.1.0.0\lib\ExcelDna.Integration.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.Core">
       <HintPath>..\packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
