Include PDB in NuGet packages

--- a/NuGet/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.nuspec
+++ b/NuGet/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.nuspec
@@ -22,5 +22,6 @@
     </metadata>
     <files>
         <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\ExcelDna.Registration.FSharp.dll" target="lib\net40\ExcelDna.Registration.FSharp.dll" />
+        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\ExcelDna.Registration.FSharp.pdb" target="lib\net40\ExcelDna.Registration.FSharp.pdb" />
     </files>
 </package>
