--- a/NuGet/ExcelDna.Registration/ExcelDna.Registration.nuspec
+++ b/NuGet/ExcelDna.Registration/ExcelDna.Registration.nuspec
@@ -19,5 +19,6 @@
     </metadata>
     <files>
         <file src="..\..\Source\ExcelDna.Registration\bin\Release\ExcelDna.Registration.dll" target="lib\net40\ExcelDna.Registration.dll" />
+        <file src="..\..\Source\ExcelDna.Registration\bin\Release\ExcelDna.Registration.pdb" target="lib\net40\ExcelDna.Registration.pdb" />
     </files>
 </package>
