--- a/Source/ExcelDna.Registration.FSharp/packages.config
+++ b/Source/ExcelDna.Registration.FSharp/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.Integration" version="1.1.0-beta2" targetFramework="net45" />
-  <package id="FSharp.Core" version="4.6.2" targetFramework="net45" />
+  <package id="ExcelDna.Integration" version="1.1.0" targetFramework="net45" />
+  <package id="FSharp.Core" version="4.7.2" targetFramework="net45" />
 </packages>
