--- a/Source/Samples/Registration.Sample.VisualBasic/packages.config
+++ b/Source/Samples/Registration.Sample.VisualBasic/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.AddIn" version="1.1.0-beta2" targetFramework="net451" developmentDependency="true" />
-  <package id="ExcelDna.Integration" version="1.1.0-beta2" targetFramework="net451" />
+  <package id="ExcelDna.AddIn" version="1.1.0" targetFramework="net451" developmentDependency="true" />
+  <package id="ExcelDna.Integration" version="1.1.0" targetFramework="net451" />
   <package id="ExcelDna.Interop" version="14.0.1" targetFramework="net451" />
 </packages>
