--- a/NuGet/ExcelDna.Registration.VisualBasic/ExcelDna.Registration.VisualBasic.nuspec
+++ b/NuGet/ExcelDna.Registration.VisualBasic/ExcelDna.Registration.VisualBasic.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>ExcelDna.Registration.VisualBasic</id>
-        <version>1.2.0-preview2</version>
+        <version>1.2.3-preview</version>
         <title>Excel-DNA Registration Extensions for Visual Basic</title>
         <authors>Govert van Drimmelen</authors>
         <owners>Govert van Drimmelen</owners>
@@ -15,13 +15,15 @@
         <summary>Excel-DNA Registration provides custom registration and function transformation helpers to Excel-DNA add-ins.</summary>
         <tags>excel exceldna udf excel-dna</tags>
         <dependencies>
-            <dependency id="ExcelDna.Integration" version="1.2.0-preview2" />
-            <dependency id="ExcelDna.Registration" version="1.2.0-preview2" />
+          <group targetFramework=".NETFramework4.5.2" >
+            <dependency id="ExcelDna.Integration" version="[1.2.3-preview]" />
+            <dependency id="ExcelDna.Registration" version="[1.2.3-preview]" />
             <dependency id="ExcelDna.Interop" version="14.0.0" />
+          </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="..\..\Source\ExcelDna.Registration.VisualBasic\bin\Release\ExcelDna.Registration.VisualBasic.dll" target="lib\net40\ExcelDna.Registration.VisualBasic.dll" />
-        <file src="..\..\Source\ExcelDna.Registration.VisualBasic\bin\Release\ExcelDna.Registration.VisualBasic.pdb" target="lib\net40\ExcelDna.Registration.VisualBasic.pdb" />
+        <file src="..\..\Source\ExcelDna.Registration.VisualBasic\bin\Release\ExcelDna.Registration.VisualBasic.dll" target="lib\net452\ExcelDna.Registration.VisualBasic.dll" />
+        <file src="..\..\Source\ExcelDna.Registration.VisualBasic\bin\Release\ExcelDna.Registration.VisualBasic.pdb" target="lib\net452\ExcelDna.Registration.VisualBasic.pdb" />
     </files>
 </package>
