--- a/NuGet/ExcelDna.Registration.VisualBasic/ExcelDna.Registration.VisualBasic.nuspec
+++ b/NuGet/ExcelDna.Registration.VisualBasic/ExcelDna.Registration.VisualBasic.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>ExcelDna.Registration.VisualBasic</id>
-        <version>1.2.5-preview</version>
+        <version>1.5.0-rc1</version>
         <title>Excel-DNA Registration Extensions for Visual Basic</title>
         <authors>Govert van Drimmelen</authors>
         <owners>Govert van Drimmelen</owners>
@@ -16,8 +16,8 @@
         <tags>excel exceldna udf excel-dna</tags>
         <dependencies>
           <group targetFramework=".NETFramework4.5.2" >
-            <dependency id="ExcelDna.Integration" version="[1.2.5-preview]" />
-            <dependency id="ExcelDna.Registration" version="[1.2.5-preview]" />
+            <dependency id="ExcelDna.Integration" version="[1.5.0-rc1]" />
+            <dependency id="ExcelDna.Registration" version="[1.5.0-rc1]" />
             <dependency id="ExcelDna.Interop" version="14.0.0" />
           </group>
         </dependencies>
