--- a/Source/ExcelDna.Registration.VisualBasic/packages.config
+++ b/Source/ExcelDna.Registration.VisualBasic/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.Integration" version="1.2.0-preview2" targetFramework="net45" />
+  <package id="ExcelDna.Integration" version="1.5.0-rc1" targetFramework="net452" />
   <package id="ExcelDna.Interop" version="14.0.1" targetFramework="net4" />
 </packages>
