--- a/Source/Samples/Registration.Sample.VisualBasic/packages.config
+++ b/Source/Samples/Registration.Sample.VisualBasic/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.AddIn" version="1.2.0-preview2" targetFramework="net45" developmentDependency="true" />
-  <package id="ExcelDna.Integration" version="1.2.0-preview2" targetFramework="net45" />
+  <package id="ExcelDna.AddIn" version="1.5.0-rc1" targetFramework="net452" developmentDependency="true" />
+  <package id="ExcelDna.Integration" version="1.5.0-rc1" targetFramework="net452" />
   <package id="ExcelDna.Interop" version="14.0.1" targetFramework="net451" />
 </packages>
