--- a/Source/Test/packages.config
+++ b/Source/Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.Integration" version="1.2.0-preview2" targetFramework="net45" />
-  <package id="NUnit" version="3.12.0" targetFramework="net451" />
+  <package id="ExcelDna.Integration" version="1.5.0-rc1" targetFramework="net452" />
+  <package id="NUnit" version="3.13.2" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="4.0.0" targetFramework="net472" />
 </packages>
